--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <ol>
       <li>Preheat Oven</li>
-      <li>Make Pizza</li>
+      <li>Make Sprinkles</li>
       <li>Melt cheese</li>
     </ol>
 
