--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </ul>
 
     <ol>
-      <li>Preheat Oven</li>
+      <li>Open Oven</li>
       <li>Make Sprinkles</li>
       <li>Melt cheese</li>
     </ol>
